--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1349,6 +1349,123 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   publisher = {Nature Publishing Group},
 }
 
+@Article{sudarshan1963,
+  author    = {Sudarshan, E. C. G.},
+  journal   = {Phys. Rev. Lett.},
+  title     = {Equivalence of Semiclassical and Quantum Mechanical Descriptions of Statistical Light Beams},
+  year      = {1963},
+  month     = {Apr},
+  pages     = {277--279},
+  volume    = {10},
+  doi       = {10.1103/PhysRevLett.10.277},
+  issue     = {7},
+  numpages  = {0},
+  publisher = {American Physical Society},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevLett.10.277},
+}
+
+@Article{fano1961,
+  author  = {Fano,U.},
+  journal = {American Journal of Physics},
+  title   = {Quantum Theory of Interference Effects in the Mixing of Light from Phase-Independent Sources},
+  year    = {1961},
+  number  = {8},
+  pages   = {539-545},
+  volume  = {29},
+  doi     = {10.1119/1.1937827},
+}
+
+@Article{hong1987,
+  author    = {Hong, C. K. and Ou, Z. Y. and Mandel, L.},
+  journal   = {Phys. Rev. Lett.},
+  title     = {Measurement of subpicosecond time intervals between two photons by interference},
+  year      = {1987},
+  month     = {Nov},
+  pages     = {2044--2046},
+  volume    = {59},
+  doi       = {10.1103/PhysRevLett.59.2044},
+  issue     = {18},
+  numpages  = {0},
+  publisher = {American Physical Society},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevLett.59.2044},
+}
+
+@Book{hooke1665,
+  author    = {Hooke, R.},
+  publisher = {J. Martyn and J. Allestry},
+  title     = {Micrographia: or, Some physiological descriptions of minute bodies made by magnifying glasses. With observations and inquiries thereupon},
+  year      = {1665},
+  address   = {London},
+}
+
+@Article{ruska1939,
+  author    = {Ruska, Helmut and Borries, Bodo v and Ruska, Ernst},
+  journal   = {Archiv f{\"u}r die gesamte Virusforschung},
+  title     = {Die Bedeutung der {\"U}bermikroskopie f{\"u}r die Virusforschung},
+  year      = {1939},
+  number    = {1},
+  pages     = {155--169},
+  volume    = {1},
+  publisher = {Springer},
+}
+
+@Article{hovmoeller1984,
+  author  = {{Hovm{\"o}ller}, Sven and {Sj{\"o}gren}, Agneta and {Farrants}, George and {Sundberg}, Margareta and {Marinder}, Bengt-Olov},
+  journal = {\nat},
+  title   = {{Accurate atomic positions from electron microscopy}},
+  year    = {1984},
+  number  = {5983},
+  pages   = {238-241},
+  volume  = {311},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/1984Natur.311..238H},
+  doi     = {10.1038/311238a0},
+}
+
+@Article{laue1915,
+  author  = {Laue, Max von},
+  journal = {Nobel Lectures: Physics 1901-1921},
+  title   = {Concerning the detection of X-ray interferences: Nobel Lecture, November 12, 1915},
+  year    = {1915},
+  pages   = {347--355},
+}
+
+@Article{watson1953,
+  author    = {Watson, James D and Crick, Francis HC},
+  journal   = {Nature},
+  title     = {Molecular structure of nucleic acids: a structure for deoxyribose nucleic acid},
+  year      = {1953},
+  number    = {4356},
+  pages     = {737--738},
+  volume    = {171},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{emma2010,
+  author    = {Emma, Paul and Akre, R and Arthur, J and Bionta, R and Bostedt, C and Bozek, J and Brachmann, A and Bucksbaum, P and Coffee, Ryan and Decker, F-J and others},
+  journal   = {nature photonics},
+  title     = {First lasing and operation of an {\aa}ngstrom-wavelength free-electron laser},
+  year      = {2010},
+  number    = {9},
+  pages     = {641--647},
+  volume    = {4},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{cloetens1996,
+  author    = {Peter Cloetens and Raymond Barrett and Jos{\'{e}} Baruchel and Jean-Pierre Guigay and Michel Schlenker},
+  title     = {Phase objects in synchrotron radiation hard x-ray imaging},
+  year      = {1996},
+  month     = {jan},
+  number    = {1},
+  pages     = {133--146},
+  volume    = {29},
+  abstract  = {Phase objects are readily imaged through Fresnel diffraction in the hard x-ray beams of third-generation synchrotron radiation sources such as the ESRF, due essentially to the very small angular size of the source. Phase objects can lead to spurious contrast in x-ray diffraction images (topographs) of crystals. It is shown that this contrast can be eliminated through random phase plates, which provide an effective way of tailoring the angular size of the source. The possibilities of this very simple technique for imaging phase objects in the hard x-ray range are explored experimentally and discussed. They appear very promising, as shown in particular by the example of a piece of human vertebra, and could be extended to phase tomography.},
+  doi       = {10.1088/0022-3727/29/1/023},
+  publisher = {{IOP} Publishing},
+  url       = {https://doi.org/10.1088/0022-3727/29/1/023},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
