--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1411,7 +1411,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 
 @Article{hovmoeller1984,
   author  = {{Hovm{\"o}ller}, Sven and {Sj{\"o}gren}, Agneta and {Farrants}, George and {Sundberg}, Margareta and {Marinder}, Bengt-Olov},
-  journal = {\nat},
+  journal = {Nature},
   title   = {{Accurate atomic positions from electron microscopy}},
   year    = {1984},
   number  = {5983},
