--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -247,7 +247,7 @@
 \end{minipage}
 
 \cleardoublepage
-\setlength{\parskip}{3mm}
+\setlength{\parskip}{2mm}
 
 %%%%%%%%%%%%%%%%   ABSTRACT   %%%%%%%%%%%%%%%%
 \onehalfspacing
@@ -350,6 +350,6 @@
 \cleardoublepage
 
 
-
+\include{thanks}
 
 \end{document}
