--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1287,9 +1287,8 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   pages    = {357-367},
   volume   = {262},
   abstract = {The European X-ray free electron laser source (XFEL) will provide highly brilliant (B>1033ph/s/mm2/mrad2/0.1% bw) and coherent X-ray beams. The pulse structure and the unprecedented brightness will allow one for the first time to study fast dynamics in the time domain, thus giving direct access to the dynamic response function S(Q,t), instead of S(Q,ω), which is of central importance for a variety of phenomena such as fast non-equilibrium dynamics initiated, e.g. by a short pump pulse. X-ray photon correlation spectroscopy (XPCS) measures the temporal changes in speckle patterns produced when coherent light is scattered by a disordered system and therefore allows to measure S(Q,t). This paper summarizes important aspects of the scientific case for an XPCS instrument at the planned XFEL. Novel XPCS set-ups are illustrated.},
-  doi      = {https://doi.org/10.1016/j.nimb.2007.05.015},
+  doi      = {10.1016/j.nimb.2007.05.015},
   keywords = {X-ray photon correlation spectroscopy (XPCS), X-ray free electron laser (XFEL), X-ray Scattering, X-ray speckles, Time domain dynamics, Pump–probe studies},
-  url      = {https://www.sciencedirect.com/science/article/pii/S0168583X07011068},
 }
 
 @Book{dirac1958,
@@ -1361,7 +1360,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   issue     = {7},
   numpages  = {0},
   publisher = {American Physical Society},
-  url       = {https://link.aps.org/doi/10.1103/PhysRevLett.10.277},
 }
 
 @Article{fano1961,
@@ -1454,6 +1452,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 
 @Article{cloetens1996,
   author    = {Peter Cloetens and Raymond Barrett and Jos{\'{e}} Baruchel and Jean-Pierre Guigay and Michel Schlenker},
+  journal   = {Journal of Physics D: Applied Physics},
   title     = {Phase objects in synchrotron radiation hard x-ray imaging},
   year      = {1996},
   month     = {jan},
@@ -1463,7 +1462,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   abstract  = {Phase objects are readily imaged through Fresnel diffraction in the hard x-ray beams of third-generation synchrotron radiation sources such as the ESRF, due essentially to the very small angular size of the source. Phase objects can lead to spurious contrast in x-ray diffraction images (topographs) of crystals. It is shown that this contrast can be eliminated through random phase plates, which provide an effective way of tailoring the angular size of the source. The possibilities of this very simple technique for imaging phase objects in the hard x-ray range are explored experimentally and discussed. They appear very promising, as shown in particular by the example of a piece of human vertebra, and could be extended to phase tomography.},
   doi       = {10.1088/0022-3727/29/1/023},
   publisher = {{IOP} Publishing},
-  url       = {https://doi.org/10.1088/0022-3727/29/1/023},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
