--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -1,23 +1,20 @@
 \chapter{Introduction}
-Throught the history of science, advances in the abilities to images stuctures at ever decreasing length scales enabled to discoveries and a better understanding of our world:
-The optical microscope gave humankind a window into the world of microorganism, x-ray crystallography and later electron microscopy allowed scientists to decipher the building blocks of life and laid the foundation for modern semiconductor physics \cite{hooke1665,laue1915,ruska1939,watson1953,hovmoeller1984}.
+Throught the history of science, advances in the abilities to image stuctures at ever decreasing length scales enabled to discoveries and a better understanding of our world:
+The optical microscope gave humankind a window into the world of microorganism, x-ray crystallography and later electron microscopy allowed scientists to decipher the building blocks of life and laid the foundation for modern semiconductor physics and pushed materials science forward, in turn leading to new advancements in imaging \cite{hooke1665,laue1915,ruska1939,watson1953,hovmoeller1984}.
 
 In X-ray imaging, the usage of synchrotron radiation and finally the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. 
 
-One of these methods is Coherent diffractive imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which can upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering \cite{schultz2013chapter7}. 
+One of these methods is Coherent Diffractive Imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which can upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering \cite{schultz2013chapter7}. 
 
-Based on intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{hanbury1956}. These experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006} . 
-
-
-
-
-
-
+ Recently, Classen et al. suggested instead to use the fluorescence for imaging in a new method they termed Incoherent Diffractive Imaging (IDI) \cite{classen2017} based on the concept of based on intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{hanbury1956}. 
+ 
+Hanbury-Brown and Twiss's experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006} . 
 
  X-ray photon correlation spectroscopy (XPCS) use intensity fluctuations in X-ray speckle patterns introduced by  temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}.
  
  
- Recently, Classen et al. suggested instead to use the fluorescence for imaging \cite{classen2017}.
+
+ 
 
 As long as the fluorescence would be recorded in a time interval of similar length as the coherence time, the phase fluctuation with the measurement can be considered stationary
 
