--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -269,8 +269,8 @@
 \let\cleardoublepage\relax
 \setlength{\parskip}{1mm}
 \listoffigures
-\clearpage
 
+\vspace{4cm}
 %%%%%%%%%   TABELLENVERZEICHNIS   %%%%%%%%%%%%
 
 \listoftables
@@ -278,7 +278,7 @@
 \vspace{4cm}
 
 %%%%%%%%%%%% AKÜRZUNGSVERZEICHNIS %%%%%%%%%%%%
-\chapter*{List of abbreviations and Symbols}
+\chapter*{List of Abbreviations}
 \begin{acronym}[XXXXX]
 	\acro{CDI}{Coherent Diffractive Imaging}
 	\acro{IDI}{Incoherent Diffractive Imaging}
