--- a/Tex/thanks.tex
+++ b/Tex/thanks.tex
@@ -1,9 +1,11 @@
 \begingroup
-\let\clearpage\relax
+\let\cleardoubepage\relax
 \chapter*{Acknowledgements}
 \endgroup
+\onehalfspacing
+I would like to thank my supervisors, Tais Gorkhover and Thomas Möller, for their continued support; 
+Stephan Kuschel, Matt Ware, and Siqi Li for the warm welcome to California, allowing me to learn from them (not only about the behavior of Selachimorpha), joined discussions, planning, preparation, and execution of the experiments; An Marshal for the help in getting the TEM images; Ben Reeves for his preparation of the GaAs samples.
 
+I greatly appreciate Jordon O'Neal, Peiho Sun, Yanwen Sun, Ichiro Inoue, and Taito Osako, and the rest of the team at the SACLA beam time for supporting us. A special mention of Siqi Li's masterful handling of Stephan's, my, and Tais' (not at all times coherent) suggestions while being the only person of our group physically at SSRL during Covid-19  for the sample characterization beamtime as to be made.
 
-I would like to thank my supervisors, Tais Gorkhover and Thomas Möller for their continued support. 
-Stephan Kuschel, Matt Ware, and Siqi Li for the warm welcome to California, allowing me to learn from them not only about the behavior of Selachimorpha, joined discussions, planning, preparation, and execution of the experiment. Cindy Patty for repeatedly applying her superpowers. I greatly appreciate Jordon O'Neal, Peiho Sun, Yanwen Sun, Ichiro Inoue, and Taito Osako and the rest of the team at the SACLA beam time, am glad  An Marshal gave me an introduction in TEM and would like to thank  Ben Reeves for his preparation of the GaAs samples. Siqi Li was the only person of our group physically at SSRL during Covid-19  handlled Stephan's, my and Tais' (not at all times coherent) suggestions masterfully for the sample characterization beamtime.
 Last but certainly not least, I'd like to thank those close to me for their empathy and great support.
