--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -57,4 +57,4 @@ We were able to record full datasets on multiple samples. The data analysis of t
 
 
 
-Extending the Hanbury-Brown and Twiss experiment to higher order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample as an effective filter by fixing some terms in the correlation function at what certain positions termed  \textit{Magic Poisition} by Schneider et al. A future application of this scheme in the analysis of the already recorded fluorescence patterns might lead to a significant increase in the SNR \cite{schneider2018}.
+Extending the Hanbury-Brown and Twiss experiment to higher order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample as an effective filter by fixing some terms in the correlation function at what certain positions termed  \textit{Magic Poisition}. A future application of this scheme in the analysis of the already recorded fluorescence patterns might lead to a significant increase in the SNR and resolution \cite{schneider2018,thiel2007}.
