--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1464,6 +1464,29 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   publisher = {{IOP} Publishing},
 }
 
+@Book{ou2017,
+  author    = {Ou, Z.Y.J.},
+  publisher = {World Scientific},
+  title     = {Quantum Optics for Experimentalists},
+  year      = {2017},
+  isbn      = {9789813220201},
+  lccn      = {2017018225},
+}
+
+@Article{thiel2007,
+  author    = {Thiel, C. and Bastin, T. and Martin, J. and Solano, E. and von Zanthier, J. and Agarwal, G. S.},
+  journal   = {Phys. Rev. Lett.},
+  title     = {Quantum Imaging with Incoherent Photons},
+  year      = {2007},
+  month     = {Sep},
+  pages     = {133603},
+  volume    = {99},
+  doi       = {10.1103/PhysRevLett.99.133603},
+  issue     = {13},
+  numpages  = {4},
+  publisher = {American Physical Society},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
