--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -290,8 +290,12 @@
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
 	\acro{GaAs}{Galliumarsenide}
+	\acro{AAO}{Anodic Alumina Oxide}
+	\acro{SNR}{Signal to Noise Ratio}
 	\acro{PSF}{Point Spread Function}
 	\acro{FWHM}{Full width at half maximum}
+	\acro{TEM} {Transmission Electron Microscopy}
+	\acro{SAXS}{Small Angle X-ray Scattering}
 \end{acronym}
 
 \endgroup
