--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -22,18 +22,40 @@
 
 \begin{figure}[h!]
 	\centering
-	\begin{subfigure}[b]{0.30\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/thresholdsCopperHighNoBeta.pdf}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.30\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/thresholdsIronLow.pdf}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.30\textwidth}
+	\begin{subfigure}[b]{0.32\textwidth}
 		\includegraphics[width=\linewidth]{images/thresholdsIronHigh.pdf}
 	\end{subfigure}
 	\caption[Spectra of fluorescence using foil samples with photon number classes]{Spectra of fluorescence using foil samples (black), and spectra of the final regression models used for classification, colored by the assigned class of signal photon numbers. The initial values used for the regression are the average values found in the regression using approximated charge sharing, for the sharing width the estimation $\sigma\approx\frac{1}{6} \left(1-\sqrt{1-\rho }\right)$ is used.  The final values of the regression used for classification of photon events are show in \fref{tab:fitvalues}.}
 	\label{fig:thresholdsfoil}
 \end{figure}
+
+
+\FloatBarrier
+\begin{table}[h!]
+	\centering
+	\caption[Parameters for simulated spectra used to find thresholds]{Parameters for simulated spectra used to find thresholds. $E_{sig}$/$E_{scat}$ denote the energy of the signal/scattering background photons, $p_{sig}$/$p_{\beta}$/$p_{scat}$ the probability of a signal/K$_{\beta}$/scattering photons, $\sigma_{scat}$ the width (standard deviation) of the (approximated as Gaussian) scattering peak, $\sigma_{det}$ the standard deviation of (assumed as Gaussian) broadening due to detector noise and $\sigma_{sharing}$ the width of the charge sharing cloud.  As the $K_beta$ peak can be distinguished as a shoulder in the Copper spectra, $K_{\beta}$ is considered as noise there and treated like the scattering noise in the classification, resulting in tighter final thresholds ()resulting in partial rejection of  $K_{\beta}$) compared to counting those photons as signal.}
+	\label{tab:fitvalues}
+	\scriptsize
+	\begin{adjustwidth}{-1em}{-1em}	
+		\begin{tabular}{lrrrrrrrrrrrr}
+			
+			\toprule
+			{} &  $E_{sig}$ &  $p_{sig}$ &  $p_{\beta}$ &  $E_{scat}$ &  $p_{scat}$ &  $\sigma_{scat}$ & $E_{scat,2}$ & $p_{scat,2}$ &  $\sigma_{det}$ &   M &  $\sigma_{sharing}$ &  $K_{\beta}$ as noise \\	\midrule
+			Copper &          7940 &       4.7e-02 &     1.5e-01 &          10500 &        5.0e-05 &                 450 &           8150 &        5.9e-05 &             350 &  20 &             4.2e-02 &                  True \\
+			Iron High         &          6340 &       2.5e-02 &     1.5e-01 &          10700 &        1.5e-05 &                 500 &                &                &             420 &  20 &             3.5e-02 &                 False \\
+			Iron Low          &          6320 &       3.3e-03 &     1.5e-01 &          10570 &        3.0e-06 &                 380 &           8000 &        3.7e-05 &             350 &  20 &             3.0e-02 &                 False \\
+			\bottomrule
+		\end{tabular}
+	\end{adjustwidth}
+\end{table}
+\FloatBarrier
+
 \begin{figure}
 	\includegraphics[width=\linewidth]{images/foil_photonmodes.pdf}
 	\label{fig:foil_photonmodes}
@@ -42,24 +64,6 @@
 
 
 
-\begin{table}[h]
-	\centering
-	\caption[Parameters for simulated spectra used to find thresholds]{Parameters for simulated spectra used to find thresholds. $E_{sig}$/$E_{scat}$ denote the energy of the signal/scattering background photons, $p_{sig}$/$p_{\beta}$/$p_{scat}$ the probability of a signal/K$_{\beta}$/scattering photons, $\sigma_{scat}$ the width (standard deviation) of the (approximated as Gaussian) scattering peak, $\sigma_{det}$ the standard deviation of (assumed as Gaussian) broadening due to detector noise and $\sigma_{sharing}$ the width of the charge sharing cloud.  As the $K_beta$ peak can be distinguished as a shoulder in the Copper spectra, $K_{\beta}$ is considered as noise there and treated like the scattering noise in the classification, resulting in tighter final thresholds ()resulting in partial rejection of  $K_{\beta}$) compared to counting those photons as signal.}
-	\label{tab:fitvalues}
-		\tiny
-	\begin{adjustwidth}{-2em}{-2em}	
-\begin{tabular}{lrrrrrrrrrrrr}
-
-	\toprule
-	{} &  $E_{sig}$ &  $p_{sig}$ &  $p_{\beta}$ &  $E_{scat}$ &  $p_{scat}$ &  $\sigma_{scat}$ & $E_{scat,2}$ & $p_{scat,2}$ &  $\sigma_{det}$ &   M &  $\sigma_{sharing}$ &  $K_{\beta}$ as noise \\	\midrule
-	Copper &          7940 &       4.7e-02 &     1.5e-01 &          10500 &        5.0e-05 &                 450 &           8150 &        5.9e-05 &             350 &  20 &             4.2e-02 &                  True \\
-	Iron High         &          6340 &       2.5e-02 &     1.5e-01 &          10700 &        1.5e-05 &                 500 &                &                &             420 &  20 &             3.5e-02 &                 False \\
-	Iron Low          &          6320 &       3.3e-03 &     1.5e-01 &          10570 &        3.0e-06 &                 380 &           8000 &        3.7e-05 &             350 &  20 &             3.0e-02 &                 False \\
-	\bottomrule
-\end{tabular}
-\end{adjustwidth}
-\end{table}
-
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kossel_gaas.png}
@@ -67,9 +71,11 @@
 	\label{fig:kosselgaasmean}
 \end{figure}
 
+\FloatBarrier
 
-\begin{table}[h!]
+\begin{table}[hp!]
 	\caption[Miller Indices considered in Kossel line least squares regression of GaAs sample]{Miller Indices considered in Kossel line least squares regression of GaAs sample 1 (left) and sample 2 (right). Not all possible Kossel lines are visible in the recorded images.}
+	\label{tab:kosselpeaks}
 	\begin{tabular}[t]{lll}
 		\toprule
 		h&           k &        l \\
@@ -124,8 +130,9 @@
 	\bottomrule
 \end{tabular}
 \end{table}
+\FloatBarrier
 
-\begin{figure}
+\begin{figure}[hp!]
 	\centering
 	\begin{subfigure}[b]{0.55\textwidth}
 		\includegraphics[width=\linewidth]{images/gaas2_overview.pdf}
@@ -138,7 +145,7 @@
 \end{figure}
 
 
-\begin{figure}[h!]
+\begin{figure}[hp!]
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/ox18.pdf}
 	\caption[SAXS of AAO membrane sample]{SAXS measurement of one of the AAO membranes used for the LCLS experiment, showing well defined features which can be used in an IDI measurement.}
