--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -1,35 +1,18 @@
 \chapter{Introduction}
-Throught the history of science, advances in the abilities to image stuctures at ever decreasing length scales enabled to discoveries and a better understanding of our world:
-The optical microscope gave humankind a window into the world of microorganism, x-ray crystallography and later electron microscopy allowed scientists to decipher the building blocks of life and laid the foundation for modern semiconductor physics and pushed materials science forward, in turn leading to new advancements in imaging \cite{hooke1665,laue1915,ruska1939,watson1953,hovmoeller1984}.
+Throughout the history of science, advances in the abilities to image structures at ever-decreasing length scales enabled break-through discoveries, and led to a better understanding of our world:
+The optical microscope gave humankind a window into the world of microorganisms, X-ray crystallography and later electron microscopy allowed scientists to decipher the building blocks of life and laid the foundation for modern semiconductor physics and pushed materials science forward, in turn leading to new advancements in imaging \cite{hooke1665,laue1915,ruska1939,watson1953,hovmoeller1984}.
 
-In X-ray imaging, the usage of synchrotron radiation and finally the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. 
+In X-ray imaging, the usage of synchrotron radiation and finally the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. One of these methods is Coherent Diffractive Imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering \cite{schultz2013chapter7}. 
 
-One of these methods is Coherent Diffractive Imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which can upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering \cite{schultz2013chapter7}. 
+Recently, Classen et al. suggested instead to use the fluorescence for imaging in a new method they termed Incoherent Diffractive Imaging (IDI) \cite{classen2017} based on the concept of based on intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{hanbury1956}.  Hanbury-Brown and Twiss's experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}. 
 
- Recently, Classen et al. suggested instead to use the fluorescence for imaging in a new method they termed Incoherent Diffractive Imaging (IDI) \cite{classen2017} based on the concept of based on intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{hanbury1956}. 
- 
-Hanbury-Brown and Twiss's experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006} . 
-
- X-ray photon correlation spectroscopy (XPCS) use intensity fluctuations in X-ray speckle patterns introduced by  temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}.
- 
- 
-
- 
-
-As long as the fluorescence would be recorded in a time interval of similar length as the coherence time, the phase fluctuation with the measurement can be considered stationary
+As long as the fluorescence would be recorded in a time interval of similar length as the coherence time, the phase fluctuation within a single measurement can be considered as almost stationary, 
 
 
+For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors \cite{xraylib}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limit access to three-dimensional information  (only on a two dimensional surface inside the reciprocal space), IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity.
 
-For many elements the cross section of fluorescence exceeds that of coherent scattering by orders of magnitude \cite{xraylib}.
+A related technique, X-ray photon correlation spectroscopy (XPCS), uses intensity fluctuations in X-ray speckle patterns introduced by temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}. Furthermore, Intensity correlation measurements have been used at synchrotrons and FELs to measure the coherence properties of the beam and for scattering experiments in which the incoherence was created by a separate diffusor \cite{yabashi2002,singer2013,inoue2019,gorobtsov2018,schneider2018}.  Nevertheless, thus far, the only successful experiment applying intensity correlation to inner shell fluorescence for imaging used a metal foil as the sample to measure merely the size of the excitation beam's focal spot \cite{nakumura2020}.
 
-
-
-The strong anisotropy of coherent scattering leads to the need for high dynamic range detectors  whereas fluorescence can be recorded in all directions
-
-
-Intensity correlation measurements have been used at synchrotrons and FELs to meassure the coherence properties beam \cite{yabashi2002,singer2013,inoue2019,gorobtsov2018}. Thus far, the only successful experiment using inner shell fluorescence intensity correlation for imaging used a metal foil to measure the volume of the focal spot \cite{nakumura2020}.
-
-
-In this thesis I will first introduce some basic concepts of coherence (\fref{chap:theory}) before presenting the results of simulations regarding the SNR and relevant parameters for an experimental implementation of IDI in \fref{chap:simulation}. In \fref{chap:experiment}, I will show the sample preparation, the setup, the necessary processing of the recorded data and finally the results of an experiment performed at the SACLA FEL facility in which we have tired to move IDI from imaging the focal volume to imaging nanoparticles and crystal samples.
+In this thesis, first, some basic concepts of coherence (\fref{chap:theory}) will be recapitulated before the results of simulations regarding the SNR and relevant parameters for an experimental implementation of IDI in \fref{chap:simulation} will be presented. In \fref{chap:experiment}, I will show the sample preparation, the setup, the necessary processing of the recorded data, and finally, the results of an experiment performed at the SACLA FEL facility in which we have tried to move IDI from imaging the focal volume to imaging nanoparticles and crystal samples.
 
 \cleardoublepage
