--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -1,5 +1,7 @@
 \chapter{Theory}
 
+\label{chap:theory}
+
 %\cite{goodman2000,goodman2007,agarwal2013,classen2017,cowley1995,born1980,trigg2005,attwood1999,griffiths2005,agarwal2013,classen2017,loudon2000,mandel1995,hanbury1956,glauber2006,baym1997,zernike1938,rosen1996,yabashi2002,singer2013,santra2009,krause1979,trost2020,inoue2019,sorum1987,lajunen04,mpccd,tono2013}
 
 
@@ -8,16 +10,12 @@
 \paragraph{Stationarity and Ergodicity}
 A process $f(t)$ is wide-sense stationary, if the expectation value $E[f(t)]$ is independent of the time $t$ and $E[f(t_1)f(t_2)]$ depends only on the time difference $\tau=f_1-f_2$. A process, for which the time average and the ensemble average are equal is called ergodic. Stationarity is a necessity for ergodicity.
 
-random process
-ergodic: time average equals expectation value
-stationary: shifting all time instants by $\tau$ does not change the statistical description of the random process 
-
 
 
 \section{Coherence}
 
 
-Coherence
+
 
 
 Spherical waves as  solutions to scalar wave equation in spherical coordinates,
@@ -81,7 +79,7 @@ A generalization of $\gamma$  to different fields  $E_1^*(\vec{r}_1,t_1)$ and $E
 
 
 
-In an interferometer, light coming from a source and a time delayed copy are superposed.
+
 
 
 
@@ -91,10 +89,12 @@ For an exponentially decaying electric field $E(t)=\Theta(t)e^{-t/\tau}$, the sp
 \end{equation*}
 Therefore, an Lorentian spectrum with a FWHM of $\Delta E$ corresponds to an lifetime of $\frac{2\hbar}{\Delta E}$.
 
-Wiener Khinchin to get g1
+The application of the Wiener Khinchin theorem then gives $g^1$
 
-On the other hand, for a Lorentzian light source, $<g_1(\tau)>=e^{-|\tau/| \tau_c}$, defining the coherence time $\tau_c$ as the time, after which $g^1$ has decreased to $e^{-1} g^1(0)$.
+On the other hand, for a Lorentzian light source, $<g_1(\tau)>=e^{-|\tau/| \tau_c}$, showing the coherence time  $\tau_c$ with the definition above is the time, after which $g^1$ has decreased to $e^{-1} g^1(0)$.
 
+
+The visibility $V$ as 
  \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/michelson.pdf}
@@ -203,7 +203,7 @@ Hanbury Brown and Twiss
 
 The interpretation based on (semi-)classical coherence theory for thermal light sources \cite{baym1997,goodman2000}
 
-If the sources $A$ and $B$ produce spherical electromagnetic waves $E_{A,B}=c_{A,B} e^{i k\left|\vec{r}-\vec{r}_{1,2}\right|+i \phi_{A,B}} /\left|\vec{r}-\vec{r}_{A,B}\right|$ with $\phi_{A,B}$ random phases and ignoring polarisation, the total intensity at detector 1 $I_{1}$ (and similiar $I_{2}$ at detector 2) is
+If the sources $A$ and $B$ produce spherical electromagnetic waves $E_{A,B}=c_{A,B} e^{i k\left|\vec{r}-\vec{r}_{1,2}\right|+i \phi_{A,B}} /\left|\vec{r}-\vec{r}_{A,B}\right|$ with $\phi_{A,B}$ random but constant phases and ignoring polarisation, the total intensity at detector 1 $I_{1}$ (and similiar $I_{2}$ at detector 2) is
 \begin{equation}
 	I_{1} =
 	\frac{1}{L^{2}}\left(
@@ -245,12 +245,13 @@ A detailed quantum mechanical treatment considers the mixtures of the probabilit
 
 
 \paragraph{Siegert Relation}
-For thermal light, 
+For thermal light with Gaussian statistics, Isserlis' theorem 
+$\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>+\left<AD\right>\left<BC\right>$ can be applied to \fref{eq:g2}, leading  (independently of the spatial configuration of the sources ) to
 \begin{equation}
 	g_2(\vec{r_1},\vec{r_2}) = 1+ |g_1(\vec{r_1},\vec{r_2}) |^2 ,
 \end{equation}
-which is called the Siegert Relation.
-For $N$ Single-Photon-Emitters, a similiar form holds \cite{classen2017}:
+which is called the Siegert Relation \cite{ou2017}.
+For $N$ Single-Photon-Emitters and quantum optical treatment,  a similiar form holds \cite{classen2017}:
 \begin{equation}
 	g_2(\vec{r_1},\vec{r_2}) = 1+ |g_1(\vec{r_1},\vec{r_2}) |^2 - \frac{2}{N} ,
 \end{equation}
@@ -259,6 +260,7 @@ As, as according to the van Cittert Zernicke theorem \fref{eq:vcz}, $g_1$ encode
 	g_1(\vec{k_1},\vec{k_2}) \propto \mathscr{F}S(\vec{r}) = S(\vec{q})
 \end{equation}
 the difference of the intensity-intensity correlation from unity is proportional (with a contrast determining constant $\beta$) to the Fourier transform of the arrangement of emitters with $q=\vec{k_1}-\vec{k_2}$ (see \fref{fig:scatteringvectors}).
+This is the basic principle used in IDI to recover spatial information from the intensity correlation.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\linewidth]{images/scatteringvectors.pdf}
@@ -271,13 +273,13 @@ the difference of the intensity-intensity correlation from unity is proportional
 Consider a complex sum of phasors of constant amplitude $A$ and independent uniformly in $(-\pi,\pi)$distributed phases $\phi_k$,
 \begin{align}
 	c=\sum^N_k A e^{i\phi_k}
-\end{align}
+\end{align}:
 For sufficiently large numbers of $N$, the real and imaginary parts
 \begin{align*}
 	r&=\Re c =  A \sum^N_k \cos(\phi_k)\\
 	i&= \Im c =A \sum^N_k \sin(\phi_k)
 \end{align*}
-will (by Central Limit Theorem) be Gaussian random variables with zero mean and variance $\sigma^2=\frac{N}{2}A^2$ and the probability distribution of the amplitude $a=\sqrt(a^2+i^2)$ will  therefore be the Rayleigh distribution
+will (by Central Limit Theorem) be Gaussian random variables with zero mean and variance $\sigma^2=\frac{N}{2}A^2$, the probability distribution of the amplitude $a=\sqrt(a^2+i^2)$ will  therefore be the Rayleigh distribution
 \begin{equation}
 	p(a)=\frac{1}{2\pi\sigma^2} a e^{\frac{a^2}{2\sigma^2}}
 \end{equation}
@@ -293,7 +295,7 @@ A sum of $M$ uncorrelated random variables following identical distributions giv
 	p(I)=\frac{I^{M-1} e^{-I/\overline{I}}} {\overline{I}^M \Gamma(M)},
 \end{equation}
 for a positive integer $M$ this simplifies with $\Gamma(M)=(M-1)!$ to an Erlang distribution  \cite{forbes2010,trost2020}.
-If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled as discrete $k$ (such as photon counts), it follows  an negative binomial distribution,
+If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled as discrete $k$ (such as photon counts in the semi-classical picture), it follows  an negative binomial distribution,
 \cite{trost2020,mandel1959,holmes2019}
 \begin{equation}
 	p(k)=
@@ -425,8 +427,6 @@ As shown by Trost et. al, this can be used so estimate the inherent noise of an 
 %will use Peak/stdev bg definition
 
 
-\label{chap:theory}
-
 
 
 
@@ -435,17 +435,18 @@ As shown by Trost et. al, this can be used so estimate the inherent noise of an 
 
 
 \section{Kossel Lines}
+\label{sec:kossel}
 X-Ray radiation  originating from within a single crystal (such as fluorescence) can get Bragg reflected at the lattice planes of the crystal, causing Intensity variation in $90^o-\theta$ around the direction $k_{hkl}$, forming the \textit{Kossel Cones} \cite{cowley1995}. On the spherical detector centered at at the crystal, the points with influenced intensity, the \textit{Kossel lines} (or in electron microscopy more commonly \text{Kikuchi Lines}) would hence lie on circles, for a flat detector on general conic sections (see \fref{fig:kossel} for an illustration).
 
-The visibility of the Kossel lines is governed by the same extinction rules as for the Bragg reflexes; the structure factor $F_{hkl}$ has to be non-zero. For a zinc blende structure (such as GaAs) with atomic scattering factors $f_a$ and $f_b$, the structure factor is
+The visibility of the Kossel lines is governed by the same extinction rules as for the Bragg reflexes-the structure factor $F_{hkl}$ has to be non-zero. For a zinc blende structure (such as GaAs) with atomic scattering factors $f_a$ and $f_b$, the structure factor is
 \begin{align}
 F_{hkl} = \begin{cases}
-0, & \text{if $h$, $k$, $l$ mixed parity}.\\
-4(f_a+f_b), & \text{if same parity and $h+k+l = 4 N$} \\
-4(f_a\pm i f_b), & \text{if same parity and $h+k+l = 2 N+1$} \\
-4(f_a-f_b), & \text{if same parity and $h+k+l = 4 N+2$} \\
+0 & \text{if $h$, $k$, $l$ mixed parity}\\
+4(f_a+f_b) & \text{if same parity and $h+k+l = 4 N$} \\
+4(f_a\pm i f_b)& \text{if same parity and $h+k+l = 2 N+1$} \\
+4(f_a-f_b) & \text{if same parity and $h+k+l = 4 N+2$,}
 \end{cases}
-\end{align},
+\end{align}
 resulting in strong Kossel lines if $h+k+l=4N$ \cite{reimer2013}.
 
 The fine structure of the intensity variations and whether they increase or decrease the intensity over the non-scattered fluorescence background depends furthermore on the viewing direction along the cone in relation to the orientation and crystal surface \cite{faigel2016}. If the fine structure cannot be resolved by the detector and only the presence, overall shape and position of the lines is considered, no distinction between these different cases has to be explicitly made.
@@ -457,10 +458,7 @@ As each point identified as belonging to a Kossel line has to be part of a conic
 \begin{equation}
 \frac{\vec{r} \cdot \vec{q}}{\left|\vec{r}\right| \left| \vec{q}\right|} = \frac{\lambda}{2d}
 \end{equation}
- for a reciprocal lattice vector $\vec{q}$ which is an element of the allowed reflections $Q$. So finding the detector orientation can be seen as finding a rotation matrix $R$ as
-\begin{equation}
-\arg\!\min_{R} \sum_{r} \min_{q\in Q} \left\Vert \frac{2 d * \vec{r} \cdot \vec{Rq}}{\left|\vec{r}\right| \left| \vec{q}\right|} -\lambda \right\Vert_2^2
-\end{equation}.
+ for a reciprocal lattice vector $\vec{q}$ which is an element of the allowed reflections $Q$. 
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.25\textwidth}
