--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,7 +3,7 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a novel high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information from the X-ray fluorescence of a sample \cite{classen2017}.. 
+Recently, a novel high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information from the X-ray fluorescence of a sample \cite{classen2017}.
 In the only experimental implementation thus far, metal foils were used as the sample, allowing the measurement of the size of the focal spot of the FEL (>100\,nm) \cite{nakumura2020}.
 
 In this work, steps toward imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: A simulation framework is presented, providing insights into the dependence of signal and noise on experimental parameters. These are used to design samples and choose the setup for a feasible experiment at the SACLA FEL facility. The implemented analysis of the data includes careful preprocessing and the first application of Kossel line based orientation determination to IDI to overcome experimental limitations before averaging the correlations of many thousand images. The results of the previously reported imaging of the focus could be reproduced. 
@@ -11,12 +11,14 @@ Even though the goal of increasing the resolution could not yet be achieved, thi
 
  \vspace{1cm}
  
+ \begin{otherlanguage}{german}
  \begin{Huge}
  	\textbf{Kurzfassung}\vspace{12mm}
  \end{Huge}
 \\
 Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, nutzt die in der astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen um aus Röntgenfluoreszens Strukturinformationen über eine Proble zu extrahieren \cite{classen2017}.  
-In den bislang einzigen veröffentlichten Ergebnisse dieser Methode werden Metal-Folien as Proben genutzt um die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser zu bestimmen \cite{nakumura2020}.
+In den bislang einzigen veröffentlichten Ergebnisse dieser Methode wird mittels Metalfolien als Proben die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
 
 In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen (Eisennanopartikel) und dreidimensionaler Messung von Einkristellen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die (für IDI erstmalige) Anwendung von Kossellinien basierter Orientierungsbestimmung.  
 Es gelang, die Abbildung des Fokus zu erfolgreich reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
+\end{otherlanguage}
