--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -5,7 +5,8 @@
 
 %Packages
 \usepackage[utf8]{inputenc}
-\usepackage[USenglish]{babel}
+\usepackage[english,german]{babel}
+\selectlanguage{english}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -253,7 +254,7 @@
 \onehalfspacing
 \include{abstract}
 \cleardoublepage
-
+\selectlanguage{english}
 
 %%%%%%%%%%%   INHALTSVERZEICHNIS   %%%%%%%%%%%
 \singlespacing
@@ -284,7 +285,7 @@
 	\acro{IDI}{Incoherent Diffractive Imaging}
 	\acro{FEL}{Free Electron Laser}
 	\acro{DoC}{Degree of Coherence}
-	\acro{HBT}{Hanburry Brown Twiss}
+	\acro{HBT}{Hanbury-Brown Twiss}
 	\acro{NP}{Nano particle}
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
